I honestly forgot what I just changed

--- a/src/Home.css
+++ b/src/Home.css
@@ -12,3 +12,9 @@ body{
     color: rgb(113, 82, 3);
     text-align: center;
 }
+
+#midsection{
+    border: solid 2px green;
+    height: 40vh;
+    width: 35vw;
+}
