moved the margin left and width/height on the midsection

--- a/src/Home.css
+++ b/src/Home.css
@@ -15,6 +15,7 @@ body{
 
 #midsection{
     border: solid 2px green;
-    height: 40vh;
-    width: 35vw;
+    height: 70vh;
+    width: 85vw;
+    margin-left: 5vw;
 }
