added border and height width to bothe info and account sections

--- a/src/Home.css
+++ b/src/Home.css
@@ -19,3 +19,15 @@ body{
     width: 85vw;
     margin-left: 5vw;
 }
+
+.accountsection{
+    width: 40vw;
+    height: 65vh;
+    border: solid 2px orange;
+}
+
+.infosection{
+    width: 40vw;
+    height: 65vh;
+    border: solid 2px orange;
+}
