--- a/src/Home.css
+++ b/src/Home.css
@@ -14,6 +14,7 @@ body{
 }
 
 #midsection{
+    display: flex;
     border: solid 2px green;
     height: 70vh;
     width: 85vw;
@@ -21,6 +22,7 @@ body{
 }
 
 .accountsection{
+    flex-direction: row;
     width: 40vw;
     height: 65vh;
     border: solid 2px orange;
