--- a/src/Home.css
+++ b/src/Home.css
@@ -31,6 +31,8 @@ body{
 
 .infosection{
     flex-direction: row;
+    margin-top: 2.5vh;
+    margin-left: 2vw;
     width: 40vw;
     height: 65vh;
     border: solid 2px orange;
