--- a/src/Home.css
+++ b/src/Home.css
@@ -24,6 +24,7 @@ body{
 .accountsection{
     flex-direction: row;
     margin-top: 2.5vh;
+    margin-left: 2vw;
     width: 40vw;
     height: 65vh;
     border: solid 2px orange;
