--- a/src/Home.css
+++ b/src/Home.css
@@ -22,12 +22,17 @@ body{
 }
 
 .accountsection{
+    list-style: none;
     flex-direction: row;
     margin-top: 2.5vh;
     margin-left: 2vw;
     width: 40vw;
     height: 65vh;
     border: solid 2px orange;
+}
+
+.uselessList{
+    list-style: none;
 }
 
 .infosection{
