--- a/src/Home.css
+++ b/src/Home.css
@@ -7,7 +7,10 @@ body{
 }
 
 .top_section{
-
+    height: 22vh;
+    width: 100vw;
+    background-color: red;
+    border: solid 2px green;
 }
 
 .hero{
