--- a/src/Home.css
+++ b/src/Home.css
@@ -11,6 +11,8 @@ body{
     width: 100vw;
     background-color: red;
     border: solid 2px green;
+    display: flex;
+    flex-direction: row;
 }
 
 .hero{
