--- a/src/Home.css
+++ b/src/Home.css
@@ -13,7 +13,7 @@ body{
     border: solid 2px;
     display: flex;
     flex-direction: row;
-    border-bottom-color: yellow;
+    border-bottom-color: rgb(224, 224, 38);
     border-bottom-width: 4px;
 }
 
@@ -21,10 +21,13 @@ body{
     display: flex;
     flex-direction: row;
     list-style: none;
+    margin-top: 5vh;
+    margin-left: 40vw;
 }
 
 #signin{
     height: 35px;
+    margin-top: 3.5vh;
 }
 
 .hero{
