--- a/src/Home.css
+++ b/src/Home.css
@@ -22,12 +22,16 @@ body{
     flex-direction: row;
     list-style: none;
     margin-top: 5vh;
-    margin-left: 40vw;
+    margin-left: 65vw;
 }
 
 #signin{
-    height: 35px;
-    margin-top: 3.5vh;
+    height: 44px;
+    margin-top: 2.4vh;
+    border-radius: 20px;
+    width: 100px;
+    margin-left: 10vw;
+    color: blue;
 }
 
 .hero{
