added an image and background still not done yet though

--- a/src/Home.css
+++ b/src/Home.css
@@ -60,14 +60,14 @@ border: solid 2px green;
     width: 100vw;
     background-color: white;
     height: 8vh;
-    border: solid 2px green;
 }
 
 .bodysection{
-    border: solid 2px green;
-    height: 70vh;
-    background-image: url("../public/basicbankfamily.jpg");
+    height: 71vh;
+    background-image: url("../public/basicbankfamily3.jpg");
     background-repeat: no-repeat;
+    background-position: right;
+    background-color: blanchedalmond;
 }
 
 .hero{
