--- a/src/Home.css
+++ b/src/Home.css
@@ -8,8 +8,10 @@
 
 li{
 margin-left: 1vw;
-width: 3vw;
-border: solid 2px green;
+width: 80px;
+height: 30px;
+font-size: large;
+color: cornsilk;
 }
 
 .top_section{
@@ -44,7 +46,7 @@ border: solid 2px green;
     margin-top: 2.4vh;
     border-radius: 20px;
     width: 100px;
-    margin-left: 16vw;
+    margin-left: 6vw;
     color: blue;
     font-weight: bold;
     letter-spacing: 1.5;
