--- a/src/Home.css
+++ b/src/Home.css
@@ -69,11 +69,11 @@ margin-left: 1vw;
     display: flex;
     flex-direction: row;
     width: 80vw;
-    font-size: 19px;
+    font-size: 20px;
 }
 
 .navListTwo li{
-    margin-left: 4vw;
+    margin-right: 2vw;
 }
 
 .secondOptionstab{
