--- a/src/Home.css
+++ b/src/Home.css
@@ -87,6 +87,8 @@ margin-left: 1vw;
     width: 100vw;
     background-color: rgb(255, 255, 255);
     height: 9vh;
+    display: flex;
+    flex-direction: row;
 }
 
 
