--- a/src/Home.css
+++ b/src/Home.css
@@ -89,6 +89,7 @@ margin-left: 1vw;
     height: 9vh;
     display: flex;
     flex-direction: row;
+    border: solid 2px green;
 }
 
 .navListThree{
@@ -96,6 +97,7 @@ margin-left: 1vw;
     flex-direction: row;
     width: 95vw;
     font-size: 20px;
+    border: solid 2px green;
 }
 
 
