added hover state to second options tab

--- a/src/Home.css
+++ b/src/Home.css
@@ -73,12 +73,12 @@ margin-left: 1vw;
 }
 
 .navListTwo li{
-    margin-right: 2vw;
+    margin-right: 3vw;
     height: 7vh;
 }
 
 .navListTwo li:hover{
-    margin-right: 2vw;
+    margin-right: 3vw;
     height: 7vh;
     border-bottom: solid 4px rgb(3, 17, 42);
 }
@@ -89,15 +89,24 @@ margin-left: 1vw;
     height: 9vh;
     display: flex;
     flex-direction: row;
-    border: solid 2px green;
 }
 
 .navListThree{
     display: flex;
     flex-direction: row;
     width: 95vw;
-    font-size: 20px;
-    border: solid 2px green;
+    font-size: 16px;
+}
+
+.navListThree li{
+    font-size: 18px;
+    margin-right: 2vw;
+}
+
+.navListThree li:hover{
+    font-size: 18px;
+    margin-right: 2vw;
+    color: rgb(30, 245, 30);
 }
 
 
