--- a/src/Home.css
+++ b/src/Home.css
@@ -133,3 +133,9 @@ margin-left: 1vw;
     margin-top: 2vh;
     margin-left: 2vh;
 }
+
+.sloganSection{
+    height: 60vh;
+    width: 25vw;
+    border: solid 2px gold;
+}
