--- a/src/Home.css
+++ b/src/Home.css
@@ -132,6 +132,7 @@ margin-left: 1vw;
     background-color: rgb(3, 17, 42);
     margin-top: 2vh;
     margin-left: 2vh;
+    display: flex;
 }
 
 .sloganSection{
