changed the flex direction to column

--- a/src/Home.css
+++ b/src/Home.css
@@ -133,6 +133,7 @@ margin-left: 1vw;
     margin-top: 2vh;
     margin-left: 2vh;
     display: flex;
+    flex-direction: column;
 }
 
 .sloganSection{
