added submit button and rearranged sizes of user field

--- a/src/Home.css
+++ b/src/Home.css
@@ -149,7 +149,8 @@ margin-left: 1vw;
 
 .username{
     display: flex;
-    width: 200px;
+    height: 6vh;
+    width: 20vw;
     margin-top: 2vh;
     margin-left: 2vw;
     background-color: rgb(240, 240, 240);
