--- a/src/Home.css
+++ b/src/Home.css
@@ -166,6 +166,8 @@ margin-left: 1vw;
 
 .submitButton{
     background-color: rgb(30, 245, 30);
+    margin-left: 3vw;
+    margin-top: 4vh;
 }
 
 .blendSection{
