--- a/src/Home.css
+++ b/src/Home.css
@@ -168,6 +168,7 @@ margin-left: 1vw;
     background-color: rgb(30, 245, 30);
     margin-left: 3vw;
     margin-top: 4vh;
+    border-color: rgb(3, 17, 42);
 }
 
 .blendSection{
