--- a/src/Home.css
+++ b/src/Home.css
@@ -169,6 +169,7 @@ margin-left: 1vw;
     margin-left: 10vw;
     margin-top: 4vh;
     border-color: rgb(30, 245, 30);
+    height: 40px;
 }
 
 .blendSection{
