changed width and margin on password field

--- a/src/Home.css
+++ b/src/Home.css
@@ -158,7 +158,7 @@ margin-left: 1vw;
 
 .password{
     display: flex;
-    width: 200px;
+    width: 20vw;
     margin-top: 2vh;
     margin-left: 2vw;
     background-color: rgb(240, 240, 240);
