--- a/src/Home.css
+++ b/src/Home.css
@@ -27,7 +27,7 @@ margin-left: 1vw;
     font-size: 50px;
     font-weight: bold;
     width: 30vw;
-    color: rgb(30, 245, 30);
+    color: goldenrod;
     margin-left: 3.5vw;
 }
 
