--- a/src/Home.css
+++ b/src/Home.css
@@ -143,6 +143,7 @@ margin-left: 1vw;
 }
 
 .sloganSection{
+    margin-top: 8vh;
     height: 40vh;
     width: 25vw;
     border: solid 2px orange;
