--- a/src/Home.css
+++ b/src/Home.css
@@ -146,7 +146,7 @@ margin-left: 1vw;
     margin-top: 8vh;
     height: 40vh;
     width: 25vw;
-    border: solid 2px orange;
+    border: solid 2px white;
 }
 
 .username{
