--- a/src/Home.css
+++ b/src/Home.css
@@ -147,6 +147,7 @@ margin-left: 1vw;
     height: 40vh;
     width: 25vw;
     border: solid 2px white;
+    background-color: brown;
 }
 
 .username{
