--- a/src/Home.css
+++ b/src/Home.css
@@ -148,6 +148,7 @@ margin-left: 1vw;
     width: 25vw;
     border: solid 2px white;
     background-color: brown;
+    color: rgb(3, 17, 42);
 }
 
 .username{
