changed font size on slogan section to 25 px

--- a/src/Home.css
+++ b/src/Home.css
@@ -149,6 +149,7 @@ margin-left: 1vw;
     border: solid 2px white;
     background-color: brown;
     color: rgb(3, 17, 42);
+    font-size: 25px;
 }
 
 .username{
