made text color white

--- a/src/Home.css
+++ b/src/Home.css
@@ -147,7 +147,7 @@ margin-left: 1vw;
     height: 50vh;
     width: 25vw;
     background-color: brown;
-    color: rgb(3, 17, 42);
+    color: white;
     font-size: 50px;
 }
 
