--- a/src/Home.css
+++ b/src/Home.css
@@ -146,7 +146,7 @@ margin-left: 1vw;
     margin-top: 14vh;
     height: 50vh;
     width: 25vw;
-    color: white;
+    color: black;
     font-size: 50px;
 }
 
