changed background on username field

--- a/src/Home.css
+++ b/src/Home.css
@@ -160,7 +160,9 @@ margin-left: 1vw;
     width: 20vw;
     margin-top: 6.5vh;
     margin-left: 3.5vw;
-    background-color: rgb(240, 240, 240);
+    background-color: rgb(3, 17, 42);
+    border: none;
+    border-bottom: solid 2px #ba8c43;
 }
 
 .password{
@@ -197,12 +199,14 @@ margin-left: 1vw;
 }
 
 .learnmore{
-    background-color: #ba8c43;
+    background-color:rgb(139, 110, 35);
     width: 20vw;
     height: 8vh;
     border: solid 2px black;
     border-radius: 25px;
     margin-left: 2vw;
+    color: black;
+    font-size: large;
 }
 
 .fillerSection{
