--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -18,3 +18,11 @@
     color:rgb(139, 110, 35);
     margin-left: 3.5vw;
 }
+
+.logout{
+    font-size: 50px;
+    font-weight: bold;
+    width: 30vw;
+    color:rgb(139, 110, 35);
+    margin-left: 40vw;
+}
