added css rules for account and state classes

--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -42,3 +42,17 @@
     width: 30vw;
     color:rgb(3, 17, 42);
 }
+
+.accountnumber{
+    font-size: 50px;
+    font-weight: bold;
+    width: 30vw;
+    color:rgb(3, 17, 42);
+}
+
+.state{
+    font-size: 50px;
+    font-weight: bold;
+    width: 30vw;
+    color:rgb(3, 17, 42);
+}
