--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -33,12 +33,12 @@
     width: 100vw;
     font-size: 20px;
     height: 15vh;
-    background-color: gainsboro;
+    background-color: rgb(254, 248, 248);
 }
 
 .name{
-    font-size: 50px;
-    font-weight: bold;
+    font-size: 30px;
+    font-weight: 500;
     width: 30vw;
     color:rgb(3, 17, 42);
 }
