--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -41,6 +41,8 @@
     font-weight: 500;
     width: 30vw;
     color:rgb(3, 17, 42);
+    margin-top: 2vh;
+    margin-left: 5vw;
 }
 
 .accountnumber{
