--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -46,8 +46,8 @@
 }
 
 .accountnumber{
-    font-size: 50px;
-    font-weight: bold;
+    font-size: 30px;
+    font-weight: 500;
     width: 40vw;
     color:rgb(3, 17, 42);
     margin-left: 20vw;
