repositioned account number

--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -50,8 +50,8 @@
     font-weight: 500;
     width: 40vw;
     color:rgb(3, 17, 42);
-    margin-left: 20vw;
-
+    margin-left: 15vw;
+    margin-top: 2vh;
 }
 
 .state{
