--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -55,8 +55,8 @@
 }
 
 .state{
-    font-size: 50px;
-    font-weight: bold;
+    font-size: 30px;
+    font-weight: 500;
     width: 30vw;
     color:rgb(3, 17, 42);
     margin-left: 10vw;
