added a few css rules to bottom  section

--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -65,5 +65,10 @@
 }
 
 .bottomsection{
-    
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    font-size: 20px;
+    height: 50vh;
+    background-color: rgb(3, 17, 42);
 }
