--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -74,5 +74,9 @@
 }
 
 .coverimage{
-    
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    height: 78vh;
+    background-image: url("../");
 }
