--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -78,5 +78,5 @@
     flex-direction: column;
     width: 100vw;
     height: 78vh;
-    background-image: url("../");
+    background-image: url("../../public/bridge.jpeg");
 }
