--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -79,4 +79,6 @@
     width: 100vw;
     height: 78vh;
     background-image: url("../../public/bridge.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
