--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -81,4 +81,5 @@
     background-image: url("../../public/bridge.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
+    opacity: 10%;
 }
