--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -78,7 +78,7 @@
     flex-direction: column;
     width: 100vw;
     height: 78vh;
-    background-image: url("../../public/bridge.jpeg");
+    background-image: url("../../public/better\ bridge.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     opacity: 10%;
