added goldline css rules

--- a/src/components/AccountCard.css
+++ b/src/components/AccountCard.css
@@ -20,7 +20,10 @@
 }
 
 .accountNumber{
-    margin-left: 12vw;
+    margin-left: 10vw;
     margin-top: 1vh;
+}
 
+.goldLine{
+border-bottom: solid 4px goldenrod;
 }
