--- a/src/components/AccountCard.css
+++ b/src/components/AccountCard.css
@@ -3,7 +3,6 @@
 
 .cardbackground{
     background-color: white;
-    border: 2px solid orange;
     height: 60vh;
     width: 30vw;
     display: flex;
@@ -25,5 +24,5 @@
 }
 
 .goldLine{
-border-bottom: solid 4px goldenrod;
+border-bottom: solid 6px rgb(139, 110, 35);
 }
