--- a/src/components/AccountCard.css
+++ b/src/components/AccountCard.css
@@ -24,6 +24,8 @@
 }
 
 .goldLine{
-border-bottom: solid 6px rgb(139, 110, 35);
-width: 12vw
+border-bottom: solid 8px rgb(139, 110, 35);
+width: 12vw;
+margin-left: 8vw;
+margin-top: 1.5vh;
 }
