added account buttons css rules and react elements

--- a/src/components/AccountCard.css
+++ b/src/components/AccountCard.css
@@ -31,7 +31,11 @@ margin-top: 1.5vh;
 }
 
 .accountBalance{
- margin-left: 8vw;
+ margin-left: 6vw;
  font-family: 'Dosis', sans-serif;
  font-size: 85px;
+}
+
+.accountButtons{
+    
 }
