--- a/src/components/AccountCard.css
+++ b/src/components/AccountCard.css
@@ -16,6 +16,7 @@
 .accountType{
     margin-left: 12vw;
     margin-top: 4vh;
+    font-size: 20px;
 }
 
 .accountNumber{
@@ -25,22 +26,24 @@
 
 .goldLine{
 border-bottom: solid 8px rgb(139, 110, 35);
-width: 12vw;
+width: 14vw;
 margin-left: 8vw;
 margin-top: 1.5vh;
 }
 
 .accountBalance{
- margin-left: 6vw;
+ margin-left: 4vw;
  font-family: 'Dosis', sans-serif;
  font-size: 85px;
 }
 
 .dollarsign{
-color: rgb(139, 110, 35)
+color: rgb(139, 110, 35);
+margin-right: 1.5vw;
 }
 
 .accountButtons{
     margin-top: 4vh;
     margin-left: 10vw;
+    border: solid 2px green;
 }
