adjusted height and width on deposit button

--- a/src/components/AccountCard.css
+++ b/src/components/AccountCard.css
@@ -47,3 +47,12 @@ margin-right: 1.5vw;
     margin-left: 10vw;
     border: solid 2px green;
 }
+
+.depositButton{
+width: 20vw;
+height: 8vh;
+}
+
+.withdrawButton{
+
+}
