--- a/src/components/AccountCard.css
+++ b/src/components/AccountCard.css
@@ -51,6 +51,8 @@ margin-right: 1.5vw;
 .depositButton{
 width: 20vw;
 height: 8vh;
+background-color: white;
+border: solid 3px blue;
 }
 
 .withdrawButton{
