--- a/src/components/AccountCard.css
+++ b/src/components/AccountCard.css
@@ -52,7 +52,7 @@ margin-right: 1.5vw;
 width: 20vw;
 height: 8vh;
 background-color: white;
-border: solid 3px blue;
+border: solid 3px rgb(3, 17, 42);
 }
 
 .withdrawButton{
