--- a/src/components/AccountCard.css
+++ b/src/components/AccountCard.css
@@ -53,6 +53,10 @@ height: 8vh;
 background-color: white;
 border: solid 3px rgb(3, 17, 42);
 margin-bottom: 1vh;
+color: rgb(3, 17, 42);
+font-size: 30px;
+font-weight: 600;
+letter-spacing: 1.5px;
 }
 
 .withdrawButton{
@@ -61,4 +65,8 @@ margin-bottom: 1vh;
     background-color: white;
     border: solid 3px rgb(3, 17, 42);
     margin-top: 1vh;
+    color: rgb(3, 17, 42);
+    font-size: 30px;
+    font-weight: 600;
+    letter-spacing: 1.5px;
 }
