--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -75,7 +75,7 @@
 
 .coverimage{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     width: 100vw;
     height: 78vh;
     background-image: url("../../public/better\ bridge.jpg");
