several changes most noticibly fixed usestate hook to include an array rather than a string

--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -83,3 +83,13 @@
     background-size: cover;
     opacity: 90%;
 }
+
+.accountscontainer{
+    position: relative;
+    display: flex;
+    flex-flow: row wrap;
+    overflow: auto;
+    margin-left: .5vw;
+    margin-right: 1vw;
+    margin-top: 2vh;
+}
