--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -101,4 +101,5 @@
     font-size: 20px;
     height: 78vh;
     background-image: url('../../public/handshake.jpeg');
+    background-repeat: no-repeat;
 }
