added css rules for form area

--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -106,3 +106,10 @@
     filter: grayscale(100%);
 
 }
+
+.createPageFormArea{
+    width: 85vw;
+    height: 60vh;
+    border: solid 3px orange;
+    margin-left: 5vw;
+}
