added a margin top and changed the border color

--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -110,6 +110,7 @@
 .createPageFormArea{
     width: 85vw;
     height: 60vh;
-    border: solid 3px orange;
-    margin-left: 10vw;
+    border: solid 3px silver;
+    margin-left: 8vw;
+    margin-top: 9.5vh;
 }
