--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -114,3 +114,13 @@
     margin-left: 8vw;
     margin-top: 9.5vh;
 }
+
+
+.createNewAccountHeader{
+font-size: 30px;
+font-weight: 500;
+width: 20vw;
+color:rgb(3, 17, 42);
+margin-left: 10vw;
+margin-top: 2vh;
+}
