--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -123,6 +123,8 @@ width: 80vw;
 color:rgb(3, 17, 42);
 text-align: center;
 margin: auto;
+border: solid 3px silver;
+height: 70vh;
 /* margin-left: 10vw;
 margin-top: 2vh; */
 }
