--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -104,7 +104,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     filter: grayscale(100%);
-
+    border: solid 3px silver;
 }
 
 .createPageFormArea{
@@ -124,7 +124,6 @@ color:rgb(3, 17, 42);
 text-align: center;
 margin: auto;
 border: solid 3px silver;
-height: 70vh;
 /* margin-left: 10vw;
 margin-top: 2vh; */
 }
