--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -137,4 +137,10 @@ margin-top: 2vh; */
     width: 90vw;
     height: 35vh;
     border: solid 2px green;
+    display: flex;
+    flex-direction: row;
+}
+
+.createAccountSection{
+    
 }
