--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -157,4 +157,7 @@ margin-top: 2vh; */
     height: 12vh;
     width: 20vw;
     align-self: center;
+    font-size: 20px;
+    color:rgb(139, 110, 35);
+
 }
