--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -156,7 +156,8 @@ margin-top: 2vh; */
     height: 12vh;
     width: 20vw;
     align-self: center;
-    font-size: 20px;
+    font-size: 45px;
+    font-weight: 900;
     color:rgb(139, 110, 35);
     background-color: rgba(255, 255, 255, 0.609);
 }
