--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -138,8 +138,7 @@ margin-top: 2vh; */
     border: solid 2px green;
     display: flex;
     flex-direction: row;
-    align-items: center;
-    margin: auto;
+    align-self: center;
 }
 
 .createAccountSection{
@@ -160,4 +159,8 @@ margin-top: 2vh; */
     font-weight: 900;
     color:rgb(139, 110, 35);
     background-color: rgba(255, 255, 255, 0.609);
+}
+
+.decorativeLine{
+    
 }
