--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -162,5 +162,7 @@ margin-top: 2vh; */
 }
 
 .decorativeLine{
-    
+    width: 25vw;
+    background-color: rgb(139, 110, 35);
+    height: 1.5vh;
 }
