changed color of font

--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -175,5 +175,7 @@ margin-top: 2vh; */
 .nameText{
     margin: auto; 
     width: 15vw;
+    height: 8vh;
+    color: rgb(139, 110, 35);
     border: solid 2px orange;
 }
