--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -174,10 +174,10 @@ margin-top: 2vh; */
 
 .nameText{
     margin: auto; 
-    text-align: center;
     width: 15vw;
     height: 10vh;
     color: rgb(139, 110, 35);
     font-size: 45px;
     font-weight: 900;
+    margin-left: 5vw;
 }
