--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -170,6 +170,8 @@ margin-top: 2vh; */
     width: 20vw;
     margin-left: 5vw;
     margin-top: 1vh;
+    background-color: rgba(255, 255, 255, 0.814);
+    font-size: larger;
 }
 
 .decorativeLine{
