--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -133,9 +133,9 @@ margin-top: 2vh; */
 }
 
 .createUserSection{
+    margin-top: 10vh;
     width: 90vw;
     height: 25vh;
-    border: solid 2px green;
     display: flex;
     flex-direction: row;
     align-self: center;
@@ -179,7 +179,7 @@ margin-top: 2vh; */
     background-color: rgb(139, 110, 35);
     height: 1.5vh;
     margin: auto;
-    margin-top: 1vh;
+    margin-top: 2.5vh;
 }
 
 .nameText{
@@ -190,4 +190,8 @@ margin-top: 2vh; */
     font-size: 45px;
     font-weight: 900;
     margin-left: 5vw;
+}
+
+.lastNameBlock{
+    
 }
