--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -193,5 +193,10 @@ margin-top: 2vh; */
 }
 
 .lastNameBlock{
-    
+    height: 10vh;
+    width: 20vw;
+    margin-left: 5vw;
+    margin-top: 1vh;
+    background-color: rgba(255, 255, 255, 0.814);
+    font-size: larger;
 }
