--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -174,6 +174,23 @@ margin-top: 2vh; */
     font-size: larger;
 }
 
+.lastname{
+    height: 10vh;
+    width: 20vw;
+    background-color: rgba(255, 255, 255, 0.814);
+    font-size: larger;
+
+}
+
+
+.email{
+    height: 10vh;
+    width: 20vw;
+    background-color: rgba(255, 255, 255, 0.814);
+    font-size: larger; 
+    margin-left: 5vw;
+}
+
 .decorativeLine{
     width: 20vw;
     background-color: rgb(139, 110, 35);
@@ -195,8 +212,15 @@ margin-top: 2vh; */
 .lastNameBlock{
     height: 10vh;
     width: 20vw;
-    margin-left: 5vw;
+    margin-left: 2vw;
     margin-top: 1vh;
     background-color: rgba(255, 255, 255, 0.814);
     font-size: larger;
+}
+
+.emailBlock{
+    width:30vw;
+    margin-left: 2vw;
+    margin-top: 1vh;
+
 }
