added last name and email text css rule blocks

--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -209,6 +209,14 @@ margin-top: 2vh; */
     margin-left: 5vw;
 }
 
+.lastNameText{
+
+}
+
+.emailText{
+    
+}
+
 .lastNameBlock{
     height: 10vh;
     width: 20vw;
