--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -120,8 +120,7 @@ font-size: 30px;
 font-weight: 500;
 width: 25vw;
 color:rgb(3, 17, 42);
-text-align: center;
-border: solid 3px silver;
+margin: auto;
 /* margin-left: 10vw;
 margin-top: 2vh; */
 }
@@ -144,7 +143,6 @@ margin-top: 2vh; */
 .createAccountSection{
     width: 90vw;
     height: 25vh;
-    border: solid 2px green;
     display: flex;
     flex-direction: row; 
     align-items: center;
