--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -109,7 +109,7 @@
 .createPageFormArea{
     width: 85vw;
     height: 60vh;
-    border: solid 3px silver;
+    border: solid 3px green;
     margin-left: 8vw;
     margin-top: 9.5vh;
 }
@@ -132,7 +132,7 @@ margin-top: 2vh; */
 }
 
 .createUserSection{
-    margin-top: 10vh;
+    margin-top: 2vh;
     width: 90vw;
     height: 25vh;
     display: flex;
