--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -157,6 +157,7 @@ margin-top: 2vh; */
     font-weight: 900;
     color:rgb(139, 110, 35);
     background-color: rgba(255, 255, 255, 0.609);
+    margin-top: 4vh;
 }
 
 .firstNameBlock{
