--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -246,5 +246,10 @@ margin-top: 2vh; */
 }
 
 .accountTypeText{
-    
+    margin: auto; 
+    width: 20vw;
+    height: 10vh;
+    color: rgb(100, 100, 100);
+    font-size: 45px;
+    font-weight: 900;
 }
