--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -255,9 +255,19 @@ margin-top: 2vh; */
 }
 
 .accountTypeBlock{
-
+    height: 10vh;
+    width: 20vw;
+    margin-left: 2vw;
+    margin-top: 1vh;
+    background-color: rgba(255, 255, 255, 0.814);
+    font-size: larger;
 }
 
 .depositBlock{
-    
+    height: 10vh;
+    width: 20vw;
+    margin-left: 2vw;
+    margin-top: 1vh;
+    background-color: rgba(255, 255, 255, 0.814);
+    font-size: larger;
 }
