--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -156,8 +156,8 @@ margin-top: 2vh; */
     font-size: 45px;
     font-weight: 900;
     color:rgb(139, 110, 35);
-    background-color: rgba(255, 255, 255, 0.609);
-    margin-top: 4vh;
+    background-color: rgb(3, 17, 42);
+    margin-top: -4vh;
 }
 
 .firstNameBlock{
