--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -133,6 +133,7 @@ margin-top: 2vh; */
 
 .createUserSection{
     margin-top: 2vh;
+    margin-left: 5vw;
     width: 90vw;
     height: 25vh;
     display: flex;
@@ -157,7 +158,7 @@ margin-top: 2vh; */
     color:rgb(139, 110, 35);
     background-color: rgb(3, 17, 42);
     margin-top: -4vh;
-    
+    margin-left: 36vw;
 }
 
 .firstNameBlock{
