moved create account section

--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -148,6 +148,7 @@ margin-top: 2vh; */
     flex-direction: row; 
     align-content: center;
     margin-top: 3vh;
+    margin-left: 3vw;
 }
 
 .openAccountButton{
