--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -120,9 +120,8 @@ font-size: 30px;
 font-weight: 500;
 width: 25vw;
 color:rgb(3, 17, 42);
-margin: auto
-/* margin-left: 10vw;
-margin-top: 2vh; */
+margin-left: 40vw;
+margin-top: 2vh;
 }
 
 
@@ -159,7 +158,7 @@ margin-top: 2vh; */
     color:rgb(139, 110, 35);
     background-color: rgb(3, 17, 42);
     margin-top: -4vh;
-    margin-left: 36vw;
+    margin-left: 38vw;
 }
 
 .firstNameBlock{
