--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -120,9 +120,8 @@ font-size: 30px;
 font-weight: 500;
 width: 25vw;
 color:rgb(3, 17, 42);
-margin: auto
-/* margin-left: 10vw;
-margin-top: 2vh; */
+align-self: center;
+margin-left: 40vw;
 }
 
 
