--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -156,9 +156,9 @@ margin-left: 40vw;
     font-size: 45px;
     font-weight: 900;
     color:rgb(139, 110, 35);
-    background-color: rgb(3, 17, 42);
+    background-color: rgba(255, 255, 255, 0.702);
     margin-top: -4vh;
-    margin-left: 36vw;
+    margin-left: 38.5vw;
 }
 
 .firstNameBlock{
